Batch 5: rework trainer move selection (100% pool + hard power bands)
Fixes the low-level Water Pulse / Aerial Ace dominance, whose root cause was
availability asymmetry (universal TMs flooded pools while weak level-up STABs
were sparse), not the power weighting alone. Implements the design-locked
move-selection spec.

Pool (getMoveSelectionPoolAtLevel):
- 100% availability (P1): drop the tm/tutor/egg/pre-evo probability rolls; every
  qualifying move from every source enters the pool. Surprise comes from the pick.
- New hard power-band filter (applyPowerBandFilter, §1b) replaces the soft level
  bias on the trainer side: Lv<15 keep Low only, 15-30 keep Low+Avg, 30+ keep
  Avg+High (drop Low). Exemptions: the mon's own level-up moves (any BP/level),
  status/gimmick moves, and priority/utility weak moves (goodWeakMoves) at Lv30+.
  Applied to the Smeargle sketch pool too.
- The shared Randomizer.levelTierWeight + TIER_* constants are left untouched so
  the species power-curve randomizer keeps its soft (0,1] contract; the trainer
  side no longer calls levelTierWeight at all.

Pick:
- STAB power lean is now Boss-only (Regular flat, C1); removed levelTierWeight
  from STAB/coverage/regular-2nd/best-damaging weights.
- Regular 2nd attack gains the phys/special category lean (Q2 table).
- Status slot (Q3): flat + team-repeat only (dropped the synergy x3 bonus and the
  accuracy lean); the stat-boost gate already lives in isRedundantStatusMove.
- Tuning: CATEGORY_PREFERENCE_BONUS 3.0->9.0 (~90% committed lean),
  ATTACKER_COMMIT_RATIO 1.15->1.25 (mixed band widened to ~25%).

goodWeakMoves: add Aqua Jet + Fake Out (P2 named priority exemptions).

Tests:
- BetterMovesetsRandomizerTest: gen-aware UBIQUITOUS_RATE_GEN1=0.28 - Gen 1's tiny
  shared movepool + no phys/special split legitimately concentrates a few
  universal moves to ~24.5% under 100% availability; gens 2+ hold under the base
  20% ceiling. Mirrors the existing Gen-1 dup-type / team-repeat carve-outs.
- Bette